# bordeux

./: .gitignore  README.md  alembic.ini  models.py  pyproject.toml
bordeux/: app.py  author_cad.py
bordeux/models/: customer.py
bordeux_adm_page/: package.json
bordeux_adm_page/src/: App.jsx
bordeux_front/: package.json
bordeux_front/src/: App.jsx
migrations/: env.py  models.py
migrations/versions/: 9d6257b72d4b_tasks_include.py  b0e186e8d52d_first.py
tests/: test_app.py
